<resources>
    <string name="app_name">ERestoTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main__home__page">Main_Home_Page</string>
    <string name="title_activity_menu">menu</string>
    <string name="title_activity_find_restaurant">find_restaurant</string>
    <string name="title_activity_setting">setting</string>
    <string name="title_activity_sign_up">sign_up</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- Strings related to radio -->
    <string name="ChoiceRadio">Choose one of the radio buttons below</string>
    <string name="pelangganradio">Pelanggan</string>
    <string name="restoranradio">Restoran</string>
    <string name="pilih">Pilih</string>
    <string name="title_activity_menu_item">menu_item</string>
    <string name="title_activity_restaurant">Map</string>

</resources>
